Text Align Fixed

--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ body {
 
 .track-name {
     font-size: 2.5rem;
+    text-align: center;
 }
 
 .track-artist {
